feat: Scan Images storage